--- a/fitzy_frontend/html/landing/beginner.html
+++ b/fitzy_frontend/html/landing/beginner.html
@@ -1,121 +1,178 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fitzy</title>
-      <link rel="icon" href="../../Assets/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="../../css/home.css"/>
-  </head>
-  <body>
-    <div class="home">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Fitzy</title>
+  <link rel="icon" href="../../Assets/logo.png" type="image/x-icon">
+  <link rel="stylesheet" href="../../css/home.css" />
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+</head>
+
+<body>
+
+  <!-- HEADER -->
+  <div class="home">
+    <div class="home-left">
+      <img src="../../Assets/logo.png" width="50" height="50" />
       <div>
-      <img src="../../Assets/logo.png" width="50px" height="50px" />Fitzy
-      <span>Lift.Sweat.Repeat</span>
-      </div>
-      <div>
-        <p class="decide">Category:<span id="categoryName"></span></p>
+        <h2>Fitzy</h2>
+        <span>Lift.Sweat.Repeat</span>
       </div>
     </div>
-    <div class="Arrranging_weeks_and_plans">
-      <div class="four_weeks_plan">
-        <div class="nav">
-          <a href="../../html/landing/beginner.html"
-            ><img
-              class="move"
-              src="../../Assets/home.png"
-              width="40px"
-              height="40px"
-          /></a>
-          <a href="../../html/veg.html"
-            ><img
-              class="move"
-              src="../../Assets/apple.png"
-              width="40px"
-              height="40px"
-          /></a>
-          <a href="../../html/exercises/chest.html"
-            ><img
-              class="move"
-              src="../../Assets/thumble.png"
-              width="45px"
-              height="70px"
-          /></a>
-          <a href="../../html/settings.html">
-            <img
-              class="move"
-              src="../../Assets/settings.png"
-              width="40px"
-              height="40px"
-            />
-          </a>
-        </div>
-        <div class="plans">
-          <h1>You get a four weeks plan</h1>
-          <div class="Weeks">
-            <div class="arranging_weeks_flex">
-              <div class="foundation_week">
-                <h2>Beginner</h2>
-                <h3>Foundation Week</h3>
-                <div class="status">Yes you can</div>
-                <a href="../../html/landing/beginner.html"><div class="week1">Start </div></a>
-              </div>
-              <div class="foundation_week">
-                <h2>Intermediate</h2>
-                <h3>Progression Week</h3>
-                <div class="status">Yes you can</div>
-                <a href="../../html/landing/intermediate.html"><div class="week1">Start </div></a>
-              </div>
-            </div>
-          </div>
-          <div >
-            <div class="Weeks">
-              <div class="arranging_weeks_flex">
-                <div class="foundation_week">
-                  <h2>Advanced</h2>
-                  <h3>Challenge Week</h3>
-                  <div class="status">Yes you can</div>
-                  <a href="../../html/landing/advance.html"><div class="week1">Start </div></a>
-                </div>
-                <div class="foundation_week">
-                  <h2>Expert</h2>
-                  <h3>Mastery Week</h3>
-                  <div class="status">Yes you can</div>
-                  <a href="../../html/landing/expert.html"><div class="week1">Start </div></a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+
+    <div class="home-right">
+      <p class="decide">
+        Category: <span id="categoryName"></span>
+      </p>
+    </div>
+  </div>
+
+
+  <!-- MAIN SECTION -->
+  <div class="Arrranging_weeks_and_plans">
+
+    <!-- LEFT SIDE -->
+    <div class="left_section">
+
+      <div class="nav">
+        <a href="../landing/beginner.html"><i class="fa-solid fa-house nav-icon"></i></a>
+        <a href="../veg.html"><i class="fa-solid fa-bowl-food nav-icon"></i></a>
+        <a href="../exercises/chest.html"><i class="fa-solid fa-dumbbell nav-icon"></i></a>
+        <a href="../settings.html"><i class="fa-solid fa-gear nav-icon"></i></a>
       </div>
-      <div class="days_plans"></div>
-      <div>
-       <u><p class="about_level">Beginner:</p></u>
-        <div class="levels">
-          <div class="level1">
-            <p class="name_of_level">Level 1 – Foundation</p>
-            <p class="quate">Build your base with easy, beginner-friendly moves.</p>
-            <i class="quate">Every strong body starts with small steps.”</i>
-            <div class="images_button"> 
-              <img class="images" src="../../Assets/level1.png" width="150px" height="150px"/>
-              <a  class="btn" href="../../html/level.html/level1.html"><p class="level-btn"> Level 1</p></a>
-            </div> 
+
+      <div class="plans">
+        <h1>You get a Eight Months plan</h1>
+
+        <!-- ROW 1 -->
+        <div class="arranging_weeks_flex">
+
+          <!-- BEGINNER (UNLOCKED DEFAULT) -->
+          <div class="foundation_week unlocked" id="beginnerCard">
+            <h2>Beginner</h2>
+            <h3>Foundation Month</h3>
+            <div class="status" id="beginnerStatus">Yes you can</div>
+            <div class="week1">Start</div>
           </div>
-          <div class="level1">
-            <p class="name_of_level">Level 2 – Activation</p>
-            <p class="quate">Wake up your muscles and boost body strength.</p>
-            <i class="quate">“Light the spark — your journey begins now.”</i>
-            <div class="images_button"> 
-              <img class="images" src="../../Assets/level2.png" width="150px" height="150px"/>
-              <a  class="btn" href="../../html/level.html/level2.html"><p class="level-btn"> Level 2</p></a>
-            </div> 
+
+          <!-- INTERMEDIATE (LOCKED DEFAULT) -->
+          <div class="foundation_week locked" id="intermediateCard">
+            <div class="lock-overlay">
+              <i class="fa-solid fa-lock"></i>
+            </div>
+            <h2>Intermediate</h2>
+            <h3>Progression Month</h3>
+            <div class="status">Locked</div>
+            <div class="week1">Start</div>
           </div>
+
         </div>
+
+        <!-- ROW 2 -->
+        <div class="arranging_weeks_flex">
+
+          <!-- ADVANCED -->
+          <div class="foundation_week locked" id="advancedCard">
+            <div class="lock-overlay">
+              <i class="fa-solid fa-lock"></i>
+            </div>
+            <h2>Advanced</h2>
+            <h3>Challenge Month</h3>
+            <div class="status">Locked</div>
+            <div class="week1">Start</div>
+          </div>
+
+          <!-- EXPERT -->
+          <div class="foundation_week locked" id="expertCard">
+            <div class="lock-overlay">
+              <i class="fa-solid fa-lock"></i>
+            </div>
+            <h2>Expert</h2>
+            <h3>Mastery Month</h3>
+            <div class="status">Locked</div>
+            <div class="week1">Start</div>
+          </div>
+
+        </div>
+
       </div>
     </div>
-    <footer>
-      <p>&copy; fitzy Lift Sweat Repeat 2025</p>
-    </footer>
-  </body>
-  <script src="../../javascript/home.js"></script>
+
+
+    <!-- DIVIDER -->
+    <div class="divider"></div>
+
+
+    <!-- RIGHT SIDE -->
+    <div class="days_plans">
+
+<div class="quote-container">
+  <h2 id="quote" class="typing"></h2>
+</div>
+
+
+
+      <div class="image-git">
+        <div class="motivation_img">
+          <img src="../../Assets/level1.png" width="200">
+        </div>
+      </div>
+
+      <!-- DAY SCROLL -->
+      <div class="start_day">
+
+        <button class="arrow" id="prevBtn">
+          <i class="fa-solid fa-chevron-left"></i>
+        </button>
+
+        <div class="day-buttons" id="dayContainer"></div>
+
+        <button class="arrow" id="nextBtn">
+          <i class="fa-solid fa-chevron-right"></i>
+        </button>
+
+      </div>
+
+      <!-- MONTH 1 -->
+      <div class="month">
+        <h3 id="monthTitle1"></h3>
+        <div class="weeks_line">
+          <div class="circle" id="m1w1">W1</div>
+          <div class="line"></div>
+          <div class="circle" id="m1w2">W2</div>
+          <div class="line"></div>
+          <div class="circle" id="m1w3">W3</div>
+          <div class="line"></div>
+          <div class="circle" id="m1w4">W4</div>
+        </div>
+      </div>
+
+      <!-- MONTH 2 -->
+      <div class="month">
+        <h3 id="monthTitle2"></h3>
+        <div class="weeks_line">
+          <div class="circle" id="m2w1">W1</div>
+          <div class="line"></div>
+          <div class="circle" id="m2w2">W2</div>
+          <div class="line"></div>
+          <div class="circle" id="m2w3">W3</div>
+          <div class="line"></div>
+          <div class="circle" id="m2w4">W4</div>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+
+  <footer>
+    <p>&copy; fitzy Lift Sweat Repeat 2025</p>
+  </footer>
+
+  <script type ="module"  src="../../javascript/home.js"></script>
+
+</body>
 </html>
