--- a/fitzy_frontend/html/settings.html
+++ b/fitzy_frontend/html/settings.html
@@ -18,10 +18,10 @@
   <div class="arranging_setting">
 
     <div class="nav">
-      <a href="../html/landing/beginner.html"><img class="move" src="../Assets/home.png" width="40"></a>
-      <a href="../html/veg.html"><img class="move" src="../Assets/apple.png" width="40"></a>
-      <a href="../html/exercises/chest.html"><img class="move" src="../Assets/thumble.png" width="45"></a>
-      <a href="../htmt/settings.html"><img class="move" src="../Assets/settings.png" width="40"></a>
+      <a href="../landing/beginner.html"><i class="fa-solid fa-house nav-icon"></i></a>
+      <a href="../veg.html"><i class="fa-solid fa-bowl-food nav-icon"></i></i></a>
+      <a href="../exercises/chest.html"><i class="fa-solid fa-dumbbell nav-icon"></i></a>
+      <a href="../settings.html"><i class="fa-solid fa-gear nav-icon"></i></a>
     </div>
 
     <div class="setting">
