Revamped Admin theme and updated labels to Upload/Update

--- a/fitzy_frontend/html/admindiet.html
+++ b/fitzy_frontend/html/admindiet.html
@@ -40,19 +40,19 @@
 
       <a href="admin.html">
         <button class="admin-btn">
-          <i class="fa-solid fa-dumbbell"></i> Post Exercise
+          <i class="fa-solid fa-dumbbell"></i> Upload Exercise
         </button>
       </a>
 
       <a href="admindiet.html">
         <button class="admin-btn active">
-          <i class="fa-solid fa-apple-whole"></i> Post Diet
+          <i class="fa-solid fa-apple-whole"></i> Update Diet
         </button>
       </a>
     </div>
 
     <div class="form-container">
-      <h2 id="formTitle">Manage Diet</h2>
+      <h2 id="formTitle">Update Diet</h2>
 
       <form id="dietForm">
 
