--- a/fitzy_frontend/html/admin.html
+++ b/fitzy_frontend/html/admin.html
@@ -1,127 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Fitzy | Admin Exercises</title>
+  <title>Fitzy | Admin Dashboard</title>
+
   <link rel="icon" href="../Assets/logo.png" type="image/x-icon">
   <link rel="stylesheet" href="../css/admin.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    crossorigin="anonymous"
+  />
 </head>
 
 <body>
 
-  <!-- HEADER -->
-  <div class="header">
-    <div class="header-left">
-      <img src="../Assets/logo.png" width="45" height="45" />
-      <div class="brand">
-        <h2>Fitzy</h2>
-        <span>Lift.Sweat.Repeat</span>
-      </div>
-    </div>
-    <div class="header-right">
-      <span>Admin Dashboard</span>
-      <button id="logoutBtn">Logout</button>
+<div class="header">
+  <div class="header-left">
+    <img src="../Assets/logo.png" width="45" height="45" />
+    <div class="brand">
+      <h2>Fitzy</h2>
+      <span>Lift.Sweat.Repeat</span>
     </div>
   </div>
 
-  <!-- MAIN SECTION -->
-  <div class="admin-main">
+  <div class="header-right">
+    <span>Admin Dashboard</span>
+    <button id="logoutBtn">Logout</button>
+  </div>
+</div>
 
-    <!-- LEFT SIDE -->
-    <div class="left_section">
-      <div class="nav">
-        <a href="admin.html" class="active"><i class="fa-solid fa-dumbbell"></i></a>
-        <a href="admindiet.html"><i class="fa-solid fa-bowl-food"></i></a>
-        <a href="admin.html"><i class="fa-solid fa-gear"></i></a>
-      </div>
 
-      <div class="plans">
-        <h1>Dashboard Control</h1>
+<h1 class="page-title">Welcome to Admin Dashboard</h1>
 
-        <a href="admin.html" class="admin-card active">
-          <h2>Upload Exercise</h2>
-          <p>Add or update workout routines and videos.</p>
-          <div class="action-label">Selected</div>
-        </a>
+<div class="admin-main">
 
-        <a href="admindiet.html" class="admin-card">
-          <h2>Update Diet</h2>
-          <p>Manage meal plans for categories.</p>
-          <div class="action-label">Switch to Diet</div>
-        </a>
-      </div>
-    </div>
+  <div class="admin-box">
+    <h3>Admin Actions</h3>
 
-    <!-- DIVIDER -->
-    <div class="divider"></div>
+    <button class="admin-btn active">
+      <i class="fa-solid fa-dumbbell"></i> Post Exercise
+    </button>
 
-    <!-- RIGHT SIDE (FORM) -->
-    <div class="form_section">
-      <h2>Upload Exercise</h2>
-
-      <form id="exerciseForm" enctype="multipart/form-data">
-        <div class="form-row">
-          <div>
-            <label>Level</label>
-            <select id="level" required>
-              <option value="">Select Level</option>
-              <option>Level 1</option>
-              <option>Level 2</option>
-              <option>Level 3</option>
-              <option>Level 4</option>
-              <option>Level 5</option>
-              <option>Level 6</option>
-            </select>
-          </div>
-          <div>
-            <label>Category</label>
-            <select id="category" required>
-              <option value="">Select Category</option>
-              <option value="1">Underweight</option>
-              <option value="2">Normal</option>
-              <option value="3">Overweight</option>
-            </select>
-          </div>
-        </div>
-
-        <label>Exercise Title</label>
-        <input id="title" type="text" placeholder="e.g. Push Ups" required>
-
-        <div class="form-row">
-          <div>
-            <label>Exercise Image</label>
-            <input id="image" type="file" accept="image/*" required>
-          </div>
-          <div>
-            <label>Exercise Video</label>
-            <input id="video" type="file" accept="video/*" required>
-          </div>
-        </div>
-
-        <label>Instructions</label>
-        <textarea id="instruction" placeholder="Steps to perform..." required></textarea>
-
-        <label>Breathing Tip</label>
-        <textarea id="breathing" placeholder="Breathe in, breathe out..."></textarea>
-
-        <label>Focus Area</label>
-        <input id="focus" type="text" placeholder="Chest, Arms, Core">
-
-        <button type="submit" class="submit-btn">Upload Exercise</button>
-      </form>
-    </div>
-
+    <a href="admindiet.html">
+      <button class="admin-btn">
+        <i class="fa-solid fa-apple-whole"></i> Post Diet
+      </button>
+    </a>
   </div>
 
-  <footer>
-    <p>&copy; fitzy Lift Sweat Repeat 2025</p>
-  </footer>
+  <div class="form-container">
+    <h2>Post Exercise</h2>
 
-  <script type="module" src="../javascript/adminexercise.js"></script>
+    <form id="exerciseForm" enctype="multipart/form-data">
 
+      <div class="form-row">
+        <div>
+          <label>Level</label>
+          <select id="level" required>
+            <option value="">Select Level</option>
+            <option>Level 1</option>
+            <option>Level 2</option>
+            <option>Level 3</option>
+            <option>Level 4</option>
+            <option>Level 5</option>
+            <option>Level 6</option>
+          </select>
+        </div>
+
+        <div>
+          <label>Category</label>
+          <select id="category" required>
+            <option value="">Select Category</option>
+            <option value="1">Underweight</option>
+            <option value="2">Normal</option>
+            <option value="3">Overweight</option>
+          </select>
+        </div>
+      </div>
+
+      <label>Exercise Title</label>
+      <input id="title" type="text" required>
+
+      <div class="form-row">
+        <div>
+          <label>Exercise Image</label>
+          <input id="image" type="file" accept="image/*" required>
+        </div>
+
+        <div>
+          <label>Exercise Video</label>
+          <input id="video" type="file" accept="video/*" required>
+        </div>
+      </div>
+
+      <label>Instructions</label>
+      <textarea id="instruction" required></textarea>
+
+      <label>Breathing Tip</label>
+      <textarea id="breathing"></textarea>
+
+      <label>Focus Area</label>
+      <input id="focus" type="text" placeholder="Chest, Arms, Core">
+
+      <button type="submit" class="submit-btn">
+        Post Exercise
+      </button>
+
+    </form>
+  </div>
+</div>
+
+<footer>
+  <p>&copy; Fitzy Lift Sweat Repeat 2025</p>
+</footer>
+
+<script  type="module"   src="../javascript/adminexercise.js"></script>
 </body>
-
 </html>
