--- a/fitzy_frontend/html/admindiet.html
+++ b/fitzy_frontend/html/admindiet.html
@@ -1,112 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Fitzy | Admin Diet</title>
+
   <link rel="icon" href="../Assets/logo.png" type="image/x-icon">
+
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  />
+
   <link rel="stylesheet" href="../css/admin.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
 </head>
 
 <body>
 
-  <!-- HEADER -->
-  <div class="header">
-    <div class="header-left">
-      <img src="../Assets/logo.png" width="45" height="45" />
-      <div class="brand">
-        <h2>Fitzy</h2>
-        <span>Lift.Sweat.Repeat</span>
-      </div>
-    </div>
-    <div class="header-right">
-      <span>Admin Dashboard</span>
-      <button id="logoutBtn">Logout</button>
+<div class="header">
+  <div class="header-left">
+    <img src="../Assets/logo.png" width="45" height="45" />
+    <div class="brand">
+      <h2>Fitzy</h2>
+      <span>Lift.Sweat.Repeat</span>
     </div>
   </div>
 
-  <!-- MAIN SECTION -->
-  <div class="admin-main">
+  <div class="header-right">
+    <span>Admin Dashboard</span>
+    <button id="logoutBtn">Logout</button>
+  </div>
+</div>
 
-    <!-- LEFT SIDE -->
-    <div class="left_section">
-      <div class="nav">
-        <a href="admin.html"><i class="fa-solid fa-dumbbell"></i></a>
-        <a href="admindiet.html" class="active"><i class="fa-solid fa-bowl-food"></i></a>
-        <a href="admin.html"><i class="fa-solid fa-gear"></i></a>
-      </div>
+<h1 class="page-title">Welcome to Admin Dashboard</h1>
 
-      <div class="plans">
-        <h1>Dashboard Control</h1>
+<div class="admin-main">
 
-        <a href="admin.html" class="admin-card">
-          <h2>Upload Exercise</h2>
-          <p>Add or update workout routines and videos.</p>
-          <div class="action-label">Switch to Exercise</div>
-        </a>
+  <div class="admin-box">
+    <h3>Admin Actions</h3>
 
-        <a href="admindiet.html" class="admin-card active">
-          <h2>Update Diet</h2>
-          <p>Manage meal plans for categories.</p>
-          <div class="action-label">Selected</div>
-        </a>
-      </div>
-    </div>
+    <a href="admin.html">
+      <button class="admin-btn">
+        <i class="fa-solid fa-dumbbell"></i> Post Exercise
+      </button>
+    </a>
 
-    <!-- DIVIDER -->
-    <div class="divider"></div>
+    <a href="admindiet.html">
+      <button class="admin-btn active">
+        <i class="fa-solid fa-apple-whole"></i> Post Diet
+      </button>
+    </a>
+  </div>
 
-    <!-- RIGHT SIDE (FORM) -->
-    <div class="form_section">
-      <h2 id="formTitle">Update Diet</h2>
+  <div class="form-container">
+    <h2>Post Diet</h2>
 
-      <form id="dietForm">
-        <div class="form-row">
-          <div>
-            <label>Day</label>
-            <input id="day" type="number" min="1" placeholder="Day (e.g. 1)" required />
-          </div>
-          <div>
-            <label>Diet Type</label>
-            <select id="dietType" required>
-              <option value="">Select Type</option>
-              <option value="veg">Veg</option>
-              <option value="nonveg">Non-Veg</option>
-            </select>
-          </div>
+    <form id="dietForm">
+
+      <div class="form-row">
+        <div>
+          <label>Day</label>
+          <input
+            id="day"
+            type="number"
+            min="1"
+            placeholder="Enter day number (eg: 1, 30)"
+            required
+          />
         </div>
 
-        <label>Category</label>
-        <select id="category" required>
-          <option value="">Select Category</option>
-          <option value="1">Underweight</option>
-          <option value="2">Normal</option>
-          <option value="3">Overweight</option>
-        </select>
+        <div>
+          <label>Diet Type</label>
+          <select id="dietType" required>
+            <option value="">Select Type</option>
+            <option value="veg">Veg</option>
+            <option value="nonveg">Non-Veg</option>
+          </select>
+        </div>
+      </div>
 
-        <label>Breakfast</label>
-        <textarea id="breakfast" placeholder="Breakfast details..." required></textarea>
+      <label>Breakfast</label>
+      <textarea id="breakfast" required></textarea>
 
-        <label>Lunch</label>
-        <textarea id="lunch" placeholder="Lunch details..." required></textarea>
+      <label>Lunch</label>
+      <textarea id="lunch" required></textarea>
 
-        <label>Dinner</label>
-        <textarea id="dinner" placeholder="Dinner details..." required></textarea>
+      <label>Dinner</label>
+      <textarea id="dinner" required></textarea>
 
-        <button type="submit" class="submit-btn" id="submitBtn">Update Diet</button>
-      </form>
-    </div>
+      <label>Category</label>
+      <select id="category" required>
+        <option value="">Select Category</option>
+        <option value="1">Underweight</option>
+        <option value="2">Normal</option>
+        <option value="3">Overweight</option>
+      </select>
 
+      <button type="submit" class="submit-btn">
+        Post Diet
+      </button>
+
+    </form>
   </div>
 
-  <footer>
-    <p>&copy; fitzy Lift Sweat Repeat 2025</p>
-  </footer>
+</div>
 
-  <script type="module" src="../javascript/admindiet.js"></script>
+<footer>
+  <p>&copy; Fitzy Lift Sweat Repeat 2025</p>
+</footer>
+
+<script   type="module"  src="../javascript/admindiet.js"></script>
 
 </body>
-
 </html>
