--- a/fitzy_frontend/html/veg.html
+++ b/fitzy_frontend/html/veg.html
@@ -20,7 +20,7 @@
         <span style="font-size: 20px; color: #555;">Lift.Sweat.Repeat</span>
       </div>
     </div>
-    <h3>Veg</h3>
+    <h3 id="dietTypeHeader">Veg</h3>
   </div>
 
   <div class="arranging_diet_flex">
