--- a/fitzy_frontend/html/admindiet.html
+++ b/fitzy_frontend/html/admindiet.html
@@ -59,7 +59,7 @@
         <div class="form-row">
           <div>
             <label>Day</label>
-            <input id="day" type="number" min="1" placeholder="Day" required />
+            <input id="day" type="number" min="1" max="30" placeholder="Day" required />
           </div>
 
           <div>
