fix: restore exercise videos in exercises folder by using Cloudinary URLs

--- a/fitzy_frontend/html/exercises/chest.html
+++ b/fitzy_frontend/html/exercises/chest.html
@@ -33,19 +33,22 @@
       <div class="exercise">
         <div>
           <video class="exe_name" width="150" height="170" controls autoplay muted loop>
-            <source src="../../Assets/exercise/Chest_press_pulse.mp4" type="video/mp4">
+            <source src="https://res.cloudinary.com/djek05t0d/video/upload/v1765850494/Chest_press_pulse_dwafvy.mp4"
+              type="video/mp4">
           </video>
           <p class="topic">Chest press pulse</p>
         </div>
         <div>
           <video class="exe_name" width="150" height="170" controls autoplay muted loop>
-            <source src="../../Assets/exercise/Knee_push_ups.mp4" type="video/mp4">
+            <source src="https://res.cloudinary.com/djek05t0d/video/upload/v1765816989/Knee_push_ups_cpucv7.mp4"
+              type="video/mp4">
           </video>
           <p class="topic">Knee pushup</p>
         </div>
         <div>
           <video class="exe_name" width="150" height="170" controls autoplay muted loop>
-            <source src="../../Assets/exercise/push_ups.mp4" type="video/mp4">
+            <source src="https://res.cloudinary.com/djek05t0d/video/upload/v1765816998/push_ups_yyvqte.mp4"
+              type="video/mp4">
           </video>
           <p class="topic">Pushup</p>
         </div>
@@ -53,19 +56,22 @@
       <div class="exercise">
         <div>
           <video class="exe_name" width="150" height="170" controls autoplay muted loop>
-            <source src="../../Assets/exercise/wide_arms_pushups.mp4" type="video/mp4">
+            <source src="https://res.cloudinary.com/djek05t0d/video/upload/v1765816998/wide_arms_pushups_i6gnu8.mp4"
+              type="video/mp4">
           </video>
           <p class="topic">Wide arm pushup</p>
         </div>
         <div>
           <video class="exe_name" width="150" height="170" controls autoplay muted loop>
-            <source src="../../Assets/exercise/inclined_push_ups.mp4" type="video/mp4">
+            <source src="https://res.cloudinary.com/djek05t0d/video/upload/v1765816990/inclined_push_ups_ad1701.mp4"
+              type="video/mp4">
           </video>
           <p class="topic">Inclined pushup</p>
         </div>
         <div>
           <video class="exe_name" width="150" height="170" controls autoplay muted loop>
-            <source src="../../Assets/exercise/elbow_back.mp4" type="video/mp4">
+            <source src="https://res.cloudinary.com/djek05t0d/video/upload/v1765872740/Elbow_back_bd2d2i.mp4"
+              type="video/mp4">
           </video>
           <p class="topic">Elbow back</p>
         </div>
@@ -107,6 +113,7 @@
   <footer>
     <p>&copy; fitzy Lift Sweat Repeat 2025</p>
   </footer>
+  <script src="../../javascript/exercises/fix_videos.js"></script>
 </body>
 
 </html>
