--- a/fitzy_frontend/html/exercises/cuts.html
+++ b/fitzy_frontend/html/exercises/cuts.html
@@ -105,6 +105,7 @@
   <footer>
     <p>&copy; fitzy Lift Sweat Repeat 2025</p>
   </footer>
+  <script src="../../javascript/exercises/fix_videos.js"></script>
 </body>
 
 </html>
