--- a/fitzy_frontend/html/exercises/shoulder.html
+++ b/fitzy_frontend/html/exercises/shoulder.html
@@ -107,6 +107,7 @@
   <footer>
     <p>&copy; fitzy Lift Sweat Repeat 2025</p>
   </footer>
+  <script src="../../javascript/exercises/fix_videos.js"></script>
 </body>
 
 </html>
