--- a/fitzy_frontend/html/admin.html
+++ b/fitzy_frontend/html/admin.html
@@ -65,6 +65,8 @@
               <option>Level 4</option>
               <option>Level 5</option>
               <option>Level 6</option>
+              <option>Level 7</option>
+              <option>Level 8</option>
             </select>
           </div>
 
