--- a/fitzy_frontend/html/exercises/chest.html
+++ b/fitzy_frontend/html/exercises/chest.html
@@ -33,22 +33,19 @@
       <div class="exercise">
         <div>
           <video class="exe_name" width="150" height="170" controls autoplay muted loop>
-            <source src="https://res.cloudinary.com/djek05t0d/video/upload/v1765850494/Chest_press_pulse_dwafvy.mp4"
-              type="video/mp4">
+            <source src="../../Assets/exercise/Chest_press_pulse.mp4" type="video/mp4">
           </video>
           <p class="topic">Chest press pulse</p>
         </div>
         <div>
           <video class="exe_name" width="150" height="170" controls autoplay muted loop>
-            <source src="https://res.cloudinary.com/djek05t0d/video/upload/v1765816989/Knee_push_ups_cpucv7.mp4"
-              type="video/mp4">
+            <source src="../../Assets/exercise/Knee_push_ups.mp4" type="video/mp4">
           </video>
           <p class="topic">Knee pushup</p>
         </div>
         <div>
           <video class="exe_name" width="150" height="170" controls autoplay muted loop>
-            <source src="https://res.cloudinary.com/djek05t0d/video/upload/v1765816998/push_ups_yyvqte.mp4"
-              type="video/mp4">
+            <source src="../../Assets/exercise/push_ups.mp4" type="video/mp4">
           </video>
           <p class="topic">Pushup</p>
         </div>
@@ -56,22 +53,19 @@
       <div class="exercise">
         <div>
           <video class="exe_name" width="150" height="170" controls autoplay muted loop>
-            <source src="https://res.cloudinary.com/djek05t0d/video/upload/v1765816998/wide_arms_pushups_i6gnu8.mp4"
-              type="video/mp4">
+            <source src="../../Assets/exercise/wide_arms_pushups.mp4" type="video/mp4">
           </video>
           <p class="topic">Wide arm pushup</p>
         </div>
         <div>
           <video class="exe_name" width="150" height="170" controls autoplay muted loop>
-            <source src="https://res.cloudinary.com/djek05t0d/video/upload/v1765816990/inclined_push_ups_ad1701.mp4"
-              type="video/mp4">
+            <source src="../../Assets/exercise/inclined_push_ups.mp4" type="video/mp4">
           </video>
           <p class="topic">Inclined pushup</p>
         </div>
         <div>
           <video class="exe_name" width="150" height="170" controls autoplay muted loop>
-            <source src="https://res.cloudinary.com/djek05t0d/video/upload/v1765872740/Elbow_back_bd2d2i.mp4"
-              type="video/mp4">
+            <source src="../../Assets/exercise/Elbow_back.mp4" type="video/mp4">
           </video>
           <p class="topic">Elbow back</p>
         </div>
