change the index page

--- a/index.html
+++ b/index.html
@@ -8,19 +8,26 @@
 </head>
 
 <body>
-  <div>
+  <div class="page">
+
     <div class="home">
-      <img src="./fitzy_frontend/Assets/logo.png" width="50" height="50" />Fitzy <span>Lift.Sweat.Repeat</span>
+      <img src="./fitzy_frontend/Assets/logo.png" width="50" height="50" />
+      Fitzy <span>Lift.Sweat.Repeat</span>
     </div>
+
     <div class="fitzy">
       <h1>Fitzy</h1>
       <h2>Lift Sweat Repeat</h2>
       <p>“Shape your body, strengthen your mind, transform your life.”</p>
-      <a href="./fitzy_frontend/html/sign_up.html"> <button>unlock</button></a>
+      <a href="./fitzy_frontend/html/sign_up.html">
+        <button>unlock</button>
+      </a>
     </div>
+
     <footer>
       <p>&copy; fitzy Lift Sweat Repeat 2025</p>
     </footer>
+
   </div>
 </body>
 
