--- a/fitzy_frontend/html/levels/workout.html
+++ b/fitzy_frontend/html/levels/workout.html
@@ -23,7 +23,7 @@
         </div>
 
         <div class="header-right">
-            <p id="currentDayHeader">Your current day: Day 1 🔥</p>
+            <p id="currentDayHeader">Your current day: Day 1 </p>
         </div>
     </div>
 
@@ -60,7 +60,6 @@
         <p>&copy; Fitzy Lift Sweat Repeat 2025</p>
     </footer>
 
-    <!-- 🔥 WARMUP OVERLAY -->
     <div id="warmupOverlay" class="warmup-overlay">
 
         <div class="warmup-box">
@@ -68,7 +67,6 @@
             <h2>Warm Up</h2>
             <p class="total-time">Total Time: 12 Minutes</p>
 
-            <!-- ✅ Exercise Title + Arrows -->
             <div class="exercise-section">
                 <button class="arrow" id="prevExercise">
                     <i class="fa-solid fa-chevron-left"></i>
@@ -83,12 +81,10 @@
                 </button>
             </div>
 
-            <!-- ✅ VIDEO + BREAK CONTAINER -->
             <div class="warmup-video">
 
                 <video id="warmupVideo" muted autoplay loop></video>
 
-                <!-- 🔥 BREAK SCREEN (INSIDE VIDEO ONLY) -->
                 <div id="breakScreen" class="break-screen">
                     <i class="fa-solid fa-clock break-icon"></i>
                     <p>Break Time</p>
