--- a/fitzy_frontend/html/landing/beginner.html
+++ b/fitzy_frontend/html/landing/beginner.html
@@ -97,6 +97,8 @@
 
     <div class="days_plans">
 
+        <div id="statusMessage"></div>
+
       <div class="right_header">
         <div class="header_bar"></div>
         <h3><span id="levelDisplay"></span>:</h3>
