--- a/fitzy_frontend/html/levels/workout.html
+++ b/fitzy_frontend/html/levels/workout.html
@@ -37,6 +37,8 @@
 
         <div class="exercise-section-wrapper">
 
+            <div id="statusMessage"></div>
+
             <div id="exerciseContainer" class="exercise-grid">
                 <p>Loading exercises...</p>
             </div>
